--- a/labmembers.html
+++ b/labmembers.html
@@ -71,21 +71,6 @@
 								</header>
 							  <div class="row">
 									<div class="col-3 col-6-narrow col-12-mobilep">
-										<a href="#" class="image fit"><img src="images/AlexA.png" alt="" /></a>
-										<p><strong>Alex Aromin<br />M.S. Graduate Student</strong><br /> 
-											Aug 2018 – Present<br /></p>
-										<p>B.S. <a href="https://www.montana.edu/" target="_blank">Montana State Univ.,</a> 2016</p>
-										<p>
-											<span class="icon solid fa-envelope"><span class="label">Email</span></span> 
-											&nbsp; <a href="mailto:aaromin@utk.edu">aaromin@utk.edu</a><br />
-										<span class="icon solid fa-map-marker-alt"><span class="label">Address</span></span> 
-										&nbsp; &nbsp;322 Hesler Hall<br />
-										<span class="icon solid fa-phone"><span class="label">Phone</span></span>
-										&nbsp; +1 (865) 974-8362<br /></p>
-									<p>
-										</p>
-									</div>
-									<div class="col-3 col-6-narrow col-12-mobilep">
 										<a href="#" class="image fit"><img src="images/EricS.png" alt="" /></a>
 										<p><strong>Eric Shershen<br />Ph.D. Graduate Student</strong><br /> 
 											Aug 2019 – Present<br /></p>
@@ -96,21 +81,9 @@
 										<span class="icon solid fa-map-marker-alt"><span class="label">Address</span></span> 
 										&nbsp; &nbsp;318 Hesler Hall<br /></p>
 									<p>
-										</p>
+									  </p>
 									</div>
-									<div class="col-3 col-6-narrow col-12-mobilep">
-										<a href="#" class="image fit"><img src="images/KatherineW.png" alt="" /></a>
-										<p><strong>Katherine Whitaker<br />Undergraduate Researcher</strong><br /> 
-									  Aug 2018 – Present</p>
-									<p>Major – Biological Sciences, concentration EEB</p>
-									</div>
-									<div class="col-3 col-6-narrow col-12-mobilep">
-										<a href="#" class="image fit"><img src="images/NathanP.png" alt="" /></a>
-										<p><strong>Nathan Pace<br />Undergraduate Researcher</strong><br /> 
-											Sept 2019 – Present</p>
-									<p>
-										Major – Biological Sciences, concentration EEB</p>
-									</div>
+								
 								  	 <div class="col-3 col-6-narrow col-12-mobilep">
 										<a href="#" class="image fit"><img src="images/FillerPhoto.jpg" alt="" /></a>
 										<p><strong>Julian Broughton<br />Undergraduate Researcher</strong><br /> 
@@ -124,23 +97,23 @@
 									    Sept 2020 – Present</p>
 									<p>
 									  Major – Biological Sciences, concentration EEB</p>
-									</div>
+								</div>
 							    <div class="col-3 col-6-narrow col-12-mobilep">
 										<a href="#" class="image fit"><img src="images/AbygaleD.jpg" alt="" /></a>
 										<p><strong>Abygale Dixon<br />Undergraduate Researcher</strong><br /> 
 											Sept 2020 – Present</p>
 									<p>
 									  Major – Biological Sciences, concentration Microbiology</p>
-									</div>
+								</div>
 								  							    <div class="col-3 col-6-narrow col-12-mobilep">
-										<a href="#" class="image fit"><img src="images/FillerPhoto.jpg" alt="" /></a>
+										<a href="#" class="image fit"><img src="images/Amy.jpg" alt="" /></a>
 										<p><strong>Amy Okafor<br />Undergraduate Researcher</strong><br /> 
 											Sept 2020 – Present</p>
 									<p>
 									  Major – Biological Sciences</p>
 									</div>
 								  							    <div class="col-3 col-6-narrow col-12-mobilep">
-										<a href="#" class="image fit"><img src="images/FillerPhoto.jpg" alt="" /></a>
+										<a href="#" class="image fit"><img src="images/Haddy3.jpg" alt="" /></a>
 										<p><strong>Haddy Salem<br />Undergraduate Researcher</strong><br /> 
 											Sept 2020 – Present</p>
 									<p>
@@ -157,6 +130,31 @@
 									<h2>Previous Lab Members</h2>
 								</header>
 								<div class="row">
+									<div class="col-3 col-6-narrow col-12-mobilep">
+										<a href="#" class="image fit"><img src="images/AlexA.png" alt="" /></a>
+										<p><strong>Alex Aromin<br />M.S. Graduate Student</strong><br /> 
+											Aug 2018 – May 2021<br /></p>
+										<p>B.S. <a href="https://www.montana.edu/" target="_blank">Montana State Univ.,</a> 2016</p>
+										<p>
+											<span class="icon solid fa-envelope"><span class="label">Email</span></span> 
+											&nbsp; <a href="mailto:aaromin@utk.edu">aaromin@utk.edu</a><br /><p>
+										Currently – </p>
+									<p>
+									  </p>
+								</div>
+									<div class="col-3 col-6-narrow col-12-mobilep">
+										<a href="#" class="image fit"><img src="images/KatherineW.png" alt="" /></a>
+										<p><strong>Katherine Whitaker<br />Undergraduate Researcher</strong><br /> 
+									  Aug 2018 – May 2021</p>
+									<p>Major – Biological Sciences, concentration EEB</p>
+									</div>
+									<div class="col-3 col-6-narrow col-12-mobilep">
+										<a href="#" class="image fit"><img src="images/NathanP.png" alt="" /></a>
+										<p><strong>Nathan Pace<br />Undergraduate Researcher</strong><br /> 
+											Sept 2019 – May 2021</p>
+									<p>
+										Major – Biological Sciences, concentration EEB</p>
+									</div>
 									<div class="col-3 col-6-narrow col-12-mobilep">
 										<a href="#" class="image fit"><img src="images/MarkW.jpg" alt="" /></a>
 										<p><strong>Mark D. Wienhold<br />Research Specialist III</strong><br /> 
