--- a/labmembers.html
+++ b/labmembers.html
@@ -139,13 +139,13 @@
 								<div class="row">
 									<div class="col-3 col-6-narrow col-12-mobilep">
 										<a href="#" class="image fit"><img src="images/AlexA.png" alt="" /></a>
-										<p><strong>Alex Aromin<br />M.S. Graduate Student</strong><br /> 
+										<p><strong>Alex Aromin<br />Graduate Student</strong><br /> 
 											Aug 2018 – May 2021<br /></p>
-										<p>B.S. <a href="https://www.montana.edu/" target="_blank">Montana State Univ.,</a> 2016</p>
+										<p>B.S., <a href="https://www.montana.edu/" target="_blank">Montana State Univ.</a>, 2016
+										M.S., <a href="https://eeb.utk.edu/" target="_blank">Univ. of Tennessee</a>, 2021</p>
 										<p>
 											<span class="icon solid fa-envelope"><span class="label">Email</span></span> 
-											&nbsp; <a href="mailto:aaromin@utk.edu">aaromin@utk.edu</a><br /><p>
-										Currently – </p>
+											&nbsp; <a href="mailto:aaromin@utk.edu">aaromin@utk.edu</a><br />
 									<p>
 									  </p>
 								</div>
@@ -153,14 +153,15 @@
 										<a href="#" class="image fit"><img src="images/KatherineW.png" alt="" /></a>
 										<p><strong>Katherine Whitaker<br />Undergraduate Researcher</strong><br /> 
 									  Aug 2018 – May 2021</p>
-									<p>Major – Biological Sciences, concentration EEB</p>
+									<p>B.S., <a href="https://eeb.utk.edu/" target="_blank">Univ. of Tennessee</a>, 2021 Major - Biological Sciences, concentration EEB</p>
+										<p>
+										Currently – Laboratory Technician at St. Jude's Childrens Hospital</p>
 									</div>
 									<div class="col-3 col-6-narrow col-12-mobilep">
 										<a href="#" class="image fit"><img src="images/NathanP.png" alt="" /></a>
 										<p><strong>Nathan Pace<br />Undergraduate Researcher</strong><br /> 
 											Sept 2019 – May 2021</p>
-									<p>
-										Major – Biological Sciences, concentration EEB</p>
+									<p>B.S., <a href="https://eeb.utk.edu/" target="_blank">Univ. of Tennessee</a>, 2021 Major - Biological Sciences, concentration EEB</p>
 									</div>
 									<div class="col-3 col-6-narrow col-12-mobilep">
 										<a href="#" class="image fit"><img src="images/MarkW.jpg" alt="" /></a>
