--- a/contact.html
+++ b/contact.html
@@ -86,7 +86,8 @@
 						<div class="row">
 							<div class="col-12 col-12-narrow col-12-mobilep">
 								<h3>Interested in joining the lab?</h3>
-								<p>Students passionate about any taxonomic group are welcome! For bryology students we have internal funding to support graduate research. <br />Contact us for more information.&nbsp; &nbsp;</p>
+								<p>Two NSF-funded PhD positions studying the functional morphology and evolution of the parent-offspring conflict in mosses are currently open! 
+									<a href="people_files/BudkeLabOpenPhdPositions.pdf" target="_blank">Click here for more information. </a> </p>
 							</div>
 								<div class="col-12 col-12-narrow col-12-mobilep"><h3>Contact Info</h3>
 							</div>
