--- a/labmembers.html
+++ b/labmembers.html
@@ -58,9 +58,9 @@
 										</ul></p>
 								<br /><p><br /><br />
 								<blockquote>
-								  <h3> Interested in joining the lab? Contact me! - <a href="mailto:jbudke@utk.edu">jbudke@utk.edu</a><br />
-								    Students passionate about any taxonomic group are welcome!<br />
-								    For bryology students we have internal funding to support graduate research.</h3>
+								  <h3> Interested in joining the lab? <br />
+								    Two NSF-funded PhD positions studying the functional morphology and evolution of the parent-offspring conflict in mosses are currently open!<br />
+									  <a href="people_files/BudkeLabOpenPhdPositions.pdf" target="_blank">Click here for more information </a>or contact me! - <a href="mailto:jbudke@utk.edu">jbudke@utk.edu</a><br /> </p></h3>
 							  </blockquote>
 						</p>
 							</section>
@@ -229,7 +229,8 @@ B.S., <a href="https://www.stcloudstate.edu/" target="_blank">St. Cloud State Un
 						<div class="row">
 							<div class="col-12 col-12-narrow col-12-mobilep">
 								<h3>Interested in joining the lab?</h3>
-								<p>Students passionate about any taxonomic group are welcome! For bryology students we have internal funding to support graduate research. <br />Contact us for more information.&nbsp; &nbsp;</p>
+								<p>Two NSF-funded PhD positions studying the functional morphology and evolution of the parent-offspring conflict in mosses are currently open! 
+									<a href="people_files/BudkeLabOpenPhdPositions.pdf" target="_blank">Click here for more information. </a> </p>
 							</div>
 								<div class="col-12 col-12-narrow col-12-mobilep"><h3>Contact Info</h3>
 							</div>
