--- a/labmembers.html
+++ b/labmembers.html
@@ -92,7 +92,7 @@
 									
 									</div>
 								  	 <div class="col-3 col-6-narrow col-12-mobilep">
-										<a href="#" class="image fit"><img src="images/FillerPhoto.jpg" alt="" /></a>
+										<a href="#" class="image fit"><img src="images/Julian.jpg" alt="" /></a>
 										<p><strong>Julian Broughton<br />Undergraduate Researcher</strong><br /> 
 											Sept 2020 – Present</p>
 									<p>
