--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
 							  <div class="container">
 						<h2><span>Evolutionary Developmental Biology | Structure-Function Relationships | Parent-Offspring Conflict |  Maternal Effects | Physiology | Systematics | Taxonomy | Botany | Bryology | Natural History Collections | Science Communication</span></h2>
 						<footer>
-						  <p>Our research focuses on the development, evolution, and function of plant structures. We study morphological features that are used to distinguish species taxonomically and those that are important for reproduction and fitness. Our research also focuses on the relationship between maternal gametophytes and their sporophyte offspring. Some of the tools we use to address our research questions are natural history collections, molecular systematic techniques, electron microscopy, and manipulation experiments.</p>
+						  <p>Our research focuses on the development, evolution, and function of plant structures. We study morphological features that are used to distinguish species taxonomically and those that are important for reproduction and fitness. Our research also focuses on the relationship betwen parenal gametophytes and their sporophyte offspring. Some of the tools we use to address our research questions are natural history collections, molecular systematic techniques, electron microscopy, and manipulation experiments.</p>
 							
 							<ul class="actions">
 							</ul>
