--- a/index.html
+++ b/index.html
@@ -44,7 +44,10 @@
 						<!-- Content -->
 							<section id="intro">
 								<a href="#" class="image fit"><img src="images/banner.jpg" alt="" /></a>
-							  <div class="container">
+								<h2>Help us unlock data from Bryophyte and Lichen specimens!</h2>
+								<h2>Join us for the GLOBAL WeDigBio event on Oct 15 &amp; 16, 2021.</h2>
+						<h2><p><a href="https://docs.google.com/forms/d/e/1FAIpQLSedx49wsw7A0DNc94nqI7VZKsLiXTH4WFqfh23Vz-BsnteUmA/viewform" title="WeDigBio" target="_blank">Click here to register.</a></p>
+							  <div class="container"></h2>
 						<h2><span>Evolutionary Developmental Biology | Structure-Function Relationships | Parent-Offspring Conflict |  Maternal Effects | Physiology | Systematics | Taxonomy | Botany | Bryology | Natural History Collections | Science Communication</span></h2>
 						<footer>
 						  <p>Our research focuses on the development, evolution, and function of plant structures. We study morphological features that are used to distinguish species taxonomically and those that are important for reproduction and fitness. Our research also focuses on the relationship betwen parenal gametophytes and their sporophyte offspring. Some of the tools we use to address our research questions are natural history collections, molecular systematic techniques, electron microscopy, and manipulation experiments.</p>
