--- a/labmembers.html
+++ b/labmembers.html
@@ -105,13 +105,7 @@
 									<p>
 									  Major – Biological Sciences, concentration EEB</p>
 								</div>
-							    <div class="col-3 col-6-narrow col-12-mobilep">
-										<a href="#" class="image fit"><img src="images/AbygaleD.jpg" alt="" /></a>
-										<p><strong>Abygale Dixon<br />Undergraduate Researcher</strong><br /> 
-											Sept 2020 – Present</p>
-									<p>
-									  Major – Biological Sciences, concentration Microbiology</p>
-								</div>
+
 								  							    <div class="col-3 col-6-narrow col-12-mobilep">
 										<a href="#" class="image fit"><img src="images/Amy.jpg" alt="" /></a>
 										<p><strong>Amy Okafor<br />Undergraduate Researcher</strong><br /> 
@@ -163,6 +157,13 @@
 											Sept 2019 – May 2021</p>
 									<p>B.S., <a href="https://eeb.utk.edu/" target="_blank">Univ. of Tennessee</a>, 2021 Major - Biological Sciences, concentration EEB</p>
 									</div>
+																    <div class="col-3 col-6-narrow col-12-mobilep">
+										<a href="#" class="image fit"><img src="images/AbygaleD.jpg" alt="" /></a>
+										<p><strong>Abygale Dixon<br />Undergraduate Researcher</strong><br /> 
+											Sept 2020 – May 2021</p>
+									<p>
+									  Major – Biological Sciences, concentration Microbiology</p>
+								</div>
 									<div class="col-3 col-6-narrow col-12-mobilep">
 										<a href="#" class="image fit"><img src="images/MarkW.jpg" alt="" /></a>
 										<p><strong>Mark D. Wienhold<br />Research Specialist III</strong><br /> 
