--- a/publications.html
+++ b/publications.html
@@ -50,6 +50,9 @@
 									<table>
 										<tbody>
 																						<tr>
+											<td>2021</td>      
+												<td>Whitaker KR*, <strong>Budke JM</strong>. Moss sporophyte transpiration rates are higher when calyptrae are removed.  <i>Evansia</i> 38: 100-108.  (*undergraduate student collaborator)<a href="https://bioone.org/journals/evansia/volume-38/issue-3/0747-9859-38.3.100/Moss-Sporophyte-Transpiration-Rates-are-Higher-when-Calyptrae-are-Removed/10.1639/0747-9859-38.3.100.full" target="_blank"> Online </a></td>
+											</tr>
 											<td>2020</td>      
 												<td>Benoit AD**, Oliver MG, Vichich RJ*, <strong>Budke JM</strong>. Noteworthy Collections: First record of the non-native plant <i>Portulaca amilis</i> (Portulacaceae) in Tennessee. <i>Castanea</i> 85: 343-347. (**graduate student collaborator, *undergraduate student collaborator)<a href="https://castaneajournal.com/article/noteworthy-collections-first-record-of-the-non-native-plant-portulaca-amilis-portulacaceae-in-tennessee/" target="_blank"> Online </a></td>
 											</tr>
