--- a/labmembers.html
+++ b/labmembers.html
@@ -89,6 +89,11 @@
 											Aug 2021 – Present</p>
 									<p>B.A., <a href="https://www.oberlin.edu/" target="_blank">Oberlin College,</a> 2019</p>
 										<p>
+											<span class="icon solid fa-envelope"><span class="label">Email</span></span> 
+											&nbsp; <a href="mailto:jbutle63@vols.utk.edu">jbutle63@vols.utk.edu</a><br />
+										<span class="icon solid fa-map-marker-alt"><span class="label">Address</span></span> 
+										&nbsp; &nbsp;318 Hesler Hall<br /></p>
+									<p>
 									
 									</div>
 								  	 <div class="col-3 col-6-narrow col-12-mobilep">
