--- a/labmembers.html
+++ b/labmembers.html
@@ -59,7 +59,7 @@
 								<br /><p><br /><br />
 								<blockquote>
 								  <h3> Interested in joining the lab? <br />
-								    Two NSF-funded PhD positions studying the functional morphology and evolution of the parent-offspring conflict in mosses are currently open!<br />
+								    Two NSF-funded PhD positions studying the functional morphology and evolution of the parent-offspring conflict in mosses are currently open! Deadline for applying for Fall 2022 admission is 1 December 2021.<br />
 									  <a href="people_files/BudkeLabOpenPhdPositions.pdf" target="_blank">Click here for more information </a>or contact me! - <a href="mailto:jbudke@utk.edu">jbudke@utk.edu</a><br /> </p></h3>
 							  </blockquote>
 						</p>
