adding Julia photo

--- a/labmembers.html
+++ b/labmembers.html
@@ -84,7 +84,7 @@
 									  </p>
 									</div>
 								<div class="col-3 col-6-narrow col-12-mobilep">
-										<a href="#" class="image fit"><img src="images/FillerPhoto.jpg" alt="" /></a>
+										<a href="#" class="image fit"><img src="images/Butler.jpg" alt="" /></a>
 										<p><strong>Julia Butler<br />M.S. Graduate Student</strong><br /> 
 											Aug 2021 – Present</p>
 									<p>B.A., <a href="https://www.oberlin.edu/" target="_blank">Oberlin College,</a> 2019</p>
