--- a/labmembers.html
+++ b/labmembers.html
@@ -140,11 +140,12 @@
 										<a href="#" class="image fit"><img src="images/AlexA.png" alt="" /></a>
 										<p><strong>Alex Aromin<br />Graduate Student</strong><br /> 
 											Aug 2018 – May 2021<br /></p>
-										<p>B.S., <a href="https://www.montana.edu/" target="_blank">Montana State Univ.</a>, 2016
+										<p>B.S., <a href="https://www.montana.edu/" target="_blank">Montana State Univ.</a>, 2016<br>
 										M.S., <a href="https://eeb.utk.edu/" target="_blank">Univ. of Tennessee</a>, 2021</p>
 										<p>
-											<span class="icon solid fa-envelope"><span class="label">Email</span></span> 
-											&nbsp; <a href="mailto:aaromin@utk.edu">aaromin@utk.edu</a><br />
+											
+											<p>
+										Currently – Ph.D. Student at <a href="https://barnabasdaru.com/about_alex/" target="_blank">Texas A&amp;M University</a></p>
 									<p>
 									  </p>
 								</div>
