--- a/labmembers.html
+++ b/labmembers.html
@@ -59,8 +59,8 @@
 								<br /><p><br /><br />
 								<blockquote>
 								  <h3> Interested in joining the lab? <br />
-								    Two NSF-funded PhD positions studying the functional morphology and evolution of the parent-offspring conflict in mosses are currently open! Deadline for applying for Fall 2022 admission is 1 December 2021.<br />
-									  <a href="people_files/BudkeLabOpenPhdPositions.pdf" target="_blank">Click here for more information </a>or contact me! - <a href="mailto:jbudke@utk.edu">jbudke@utk.edu</a><br /> </p></h3>
+								    We are hiring a Postdoctoral Research Associate to work on an NSF-funded project studying the functional morphology and evolution of the parent-offspring conflict in moss plants! Deadline for applying is 3 April 2022.<br />
+									  <a href="https://www.nsf.gov/awardsearch/showAward?AWD_ID=2046467&HistoricalAwards=false" target="_blank"> Read more about the project here  </a> &amp; <a href="https://ut.taleo.net/careersection/ut_system/jobdetail.ftl?job=22000000CZ&tz=GMT-05%3A00&tzname=America%2FNew_York" target="_blank"> click here to apply!</a> </a><br /> </p></h3>
 							  </blockquote>
 						</p>
 							</section>
@@ -236,8 +236,8 @@ B.S., <a href="https://www.stcloudstate.edu/" target="_blank">St. Cloud State Un
 						<div class="row">
 							<div class="col-12 col-12-narrow col-12-mobilep">
 								<h3>Interested in joining the lab?</h3>
-								<p>Two NSF-funded PhD positions studying the functional morphology and evolution of the parent-offspring conflict in mosses are currently open! 
-									<a href="people_files/BudkeLabOpenPhdPositions.pdf" target="_blank">Click here for more information. </a> </p>
+						<p>We are hiring a Postdoctoral Research Associate  to work on an NSF-funded project studying the functional morphology and evolution of the parent-offspring conflict in moss plants! Deadline for applying is 3 April 2022. 
+							  <a href="https://www.nsf.gov/awardsearch/showAward?AWD_ID=2046467&HistoricalAwards=false" target="_blank"> Read more about the project here </a> &amp; <a href="https://ut.taleo.net/careersection/ut_system/jobdetail.ftl?job=22000000CZ&tz=GMT-05%3A00&tzname=America%2FNew_York" target="_blank"> click here to apply!</a> </a><br /> </p>
 							</div>
 								<div class="col-12 col-12-narrow col-12-mobilep"><h3>Contact Info</h3>
 							</div>
