--- a/labmembers.html
+++ b/labmembers.html
@@ -59,7 +59,7 @@
 								<br /><p><br /><br />
 								<blockquote>
 								  <h3> Interested in joining the lab? <br />
-								    We are hiring a Postdoctoral Research Associate to work on an NSF-funded project studying the functional morphology and evolution of the parent-offspring conflict in moss plants! Deadline for applying is 3 April 2022.<br />
+								    We are hiring a Postdoctoral Research Associate to work on an NSF-funded project studying the functional morphology and evolution of the parent-offspring conflict in moss plants! Appication review begins 4 April 2022.<br />
 									  <a href="https://www.nsf.gov/awardsearch/showAward?AWD_ID=2046467&HistoricalAwards=false" target="_blank"> Read more about the project here  </a> &amp; <a href="https://ut.taleo.net/careersection/ut_system/jobdetail.ftl?job=22000000CZ&tz=GMT-05%3A00&tzname=America%2FNew_York" target="_blank"> click here to apply!</a> </a><br /> </p></h3>
 							  </blockquote>
 						</p>
@@ -236,7 +236,7 @@ B.S., <a href="https://www.stcloudstate.edu/" target="_blank">St. Cloud State Un
 						<div class="row">
 							<div class="col-12 col-12-narrow col-12-mobilep">
 								<h3>Interested in joining the lab?</h3>
-						<p>We are hiring a Postdoctoral Research Associate  to work on an NSF-funded project studying the functional morphology and evolution of the parent-offspring conflict in moss plants! Deadline for applying is 3 April 2022. 
+						<p>We are hiring a Postdoctoral Research Associate  to work on an NSF-funded project studying the functional morphology and evolution of the parent-offspring conflict in moss plants! Appication review begins 4 April 2022. 
 							  <a href="https://www.nsf.gov/awardsearch/showAward?AWD_ID=2046467&HistoricalAwards=false" target="_blank"> Read more about the project here </a> &amp; <a href="https://ut.taleo.net/careersection/ut_system/jobdetail.ftl?job=22000000CZ&tz=GMT-05%3A00&tzname=America%2FNew_York" target="_blank"> click here to apply!</a> </a><br /> </p>
 							</div>
 								<div class="col-12 col-12-narrow col-12-mobilep"><h3>Contact Info</h3>
