--- a/labmembers.html
+++ b/labmembers.html
@@ -145,7 +145,7 @@
 										<p>
 											
 											<p>
-										Currently – Ph.D. Student at <a href="https://barnabasdaru.com/about_alex/" target="_blank">Texas A&amp;M University</a></p>
+										Currently – Ph.D. Student at Texas A&amp;M University</a></p>
 									<p>
 									  </p>
 								</div>
@@ -155,7 +155,7 @@
 									  Aug 2018 – May 2021</p>
 									<p>B.S., <a href="https://eeb.utk.edu/" target="_blank">Univ. of Tennessee</a>, 2021 Major - Biological Sciences, concentration EEB</p>
 										<p>
-										Currently – Laboratory Technician at St. Jude's Childrens Hospital</p>
+										Currently – Researcher at St. Jude Children's Research Hospital</p>
 									</div>
 									<div class="col-3 col-6-narrow col-12-mobilep">
 										<a href="#" class="image fit"><img src="images/NathanP.png" alt="" /></a>
