New PhD Student Advertisement

--- a/teaching.html
+++ b/teaching.html
@@ -129,8 +129,9 @@
 						<div class="row">
 							<div class="col-12 col-12-narrow col-12-mobilep">
 								<h3>Interested in joining the lab?</h3>
-								<p>We are hiring a Postdoctoral Research Associate to work on an NSF-funded project studying the functional morphology and evolution of the parent-offspring conflict in moss plants! Appication review begins 4 April 2022. 
-							  <a href="https://www.nsf.gov/awardsearch/showAward?AWD_ID=2046467&HistoricalAwards=false" target="_blank"> Read more about the project here </a> &amp; <a href="https://ut.taleo.net/careersection/ut_system/jobdetail.ftl?job=22000000CZ&tz=GMT-05%3A00&tzname=America%2FNew_York" target="_blank"> click here to apply!</a> </a><br /> </p>
+								<p>We are recruiting a PhD student to work on  a US National Science Foundation funded project studying the functional morphology and evolution of the parent-offspring conflict in moss plants!
+								    Applications due Dec 2022 with a start date of Aug 2023. Includes 3-year Graduate Research Assistantship. <br>
+									  <a href="people_files/OpenPhdPositionStartingFall2023.pdf" target="_blank">Click here for more information about the project.</a> To apply for this position please send an email expressing your interest with your CV and unofficial transcripts attached to Dr. Jessica Budke <a title="mailto:jbudke@utk.edu" href="mailto:jbudke@utk.edu">jbudke@utk.edu</a> </a><br /> </p>
 							</div>
 								<div class="col-12 col-12-narrow col-12-mobilep"><h3>Contact Info</h3>
 							</div>
