--- a/labmembers.html
+++ b/labmembers.html
@@ -47,7 +47,7 @@
 								<a name="principalinvestigator"></a><h2>Principal Investigator</h2>
 								<p>
 									<span class="image left"><img src="images/JessicaE.jpg" alt="Dr. Jessica M. Budke Photo" /></span>
-									<h3>Dr. Jessica M. Budke - Assistant Professor &amp; Herbarium Director (TENN)</h3>
+							  <h3>Dr. Jessica M. Budke - Assistant Professor &amp; Herbarium Director (TENN)</h3>
 								<ul>
 									Ph.D., <a href="https://eeb.uconn.edu/" target="_blank">University of Connecticut</a>, 2011<br />
 									M.S., <a href="https://eeb.uconn.edu/" target="_blank">University of Connecticut</a>, 2005<br />
@@ -55,12 +55,15 @@
 									<br />
 								    <a href="https://scholar.google.com/citations?hl=en&user=CJ6j1Y0AAAAJ&view_op=list_works&gmla=AJsN-F764UKF9tsLgJVXe7E9gbAX_UcBC15kEFklgE14D4lMlJCZQjBMespd37oBvUc4YeINrT_Li9tsAEHfRmb4PtzOr5SmgQ" target="_blank">Google Scholar Page</a><br />
 									<a href="people_files/Budke_CV64Full.pdf" target="_blank">Current CV</a>
-										</ul></p>
+							  </ul></p>
 								<br /><p><br /><br />
-								<blockquote>
+							  <blockquote>
 								  <h3> Interested in joining the lab? <br />
-								    We are hiring a Postdoctoral Research Associate to work on an NSF-funded project studying the functional morphology and evolution of the parent-offspring conflict in moss plants! Appication review begins 4 April 2022.<br />
-									  <a href="https://www.nsf.gov/awardsearch/showAward?AWD_ID=2046467&HistoricalAwards=false" target="_blank"> Read more about the project here  </a> &amp; <a href="https://ut.taleo.net/careersection/ut_system/jobdetail.ftl?job=22000000CZ&tz=GMT-05%3A00&tzname=America%2FNew_York" target="_blank"> click here to apply!</a> </a><br /> </p></h3>
+								    - We are recruiting a PhD student to work on  a US National Science Foundation funded project studying the functional morphology and evolution of the parent-offspring conflict in moss plants! <br>
+								    - Applications due Dec 2022 with a start date of Aug 2023. Includes a 3-year Graduate Research Assistantship.<br> 
+									  <a href="people_files/OpenPhdPositionStartingFall2023.pdf" target="_blank">- Click here for more information about the project.</a> <br>
+- To apply for this position please send an email expressing your interest with your CV and unofficial transcripts attached to Dr. Jessica Budke <a title="mailto:jbudke@utk.edu" href="mailto:jbudke@utk.edu">jbudke@utk.edu</a><br />
+									</p></h3>
 							  </blockquote>
 						</p>
 							</section>
@@ -236,8 +239,9 @@ B.S., <a href="https://www.stcloudstate.edu/" target="_blank">St. Cloud State Un
 						<div class="row">
 							<div class="col-12 col-12-narrow col-12-mobilep">
 								<h3>Interested in joining the lab?</h3>
-						<p>We are hiring a Postdoctoral Research Associate  to work on an NSF-funded project studying the functional morphology and evolution of the parent-offspring conflict in moss plants! Appication review begins 4 April 2022. 
-							  <a href="https://www.nsf.gov/awardsearch/showAward?AWD_ID=2046467&HistoricalAwards=false" target="_blank"> Read more about the project here </a> &amp; <a href="https://ut.taleo.net/careersection/ut_system/jobdetail.ftl?job=22000000CZ&tz=GMT-05%3A00&tzname=America%2FNew_York" target="_blank"> click here to apply!</a> </a><br /> </p>
+						<p>We are recruiting a PhD student to work on  a US National Science Foundation funded project studying the functional morphology and evolution of the parent-offspring conflict in moss plants!
+								    Applications due Dec 2022 with a start date of Aug 2023. Includes a 3-year Graduate Research Assistantship. <br>
+									  <a href="people_files/OpenPhdPositionStartingFall2023.pdf" target="_blank">Click here for more information about the project.</a> To apply for this position please send an email expressing your interest with your CV and unofficial transcripts attached to Dr. Jessica Budke <a title="mailto:jbudke@utk.edu" href="mailto:jbudke@utk.edu">jbudke@utk.edu</a> </a><br /> </p>
 							</div>
 								<div class="col-12 col-12-narrow col-12-mobilep"><h3>Contact Info</h3>
 							</div>
