--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
 								
 						<h2><span>Evolutionary Developmental Biology | Structure-Function Relationships | Parent-Offspring Conflict |  Maternal Effects | Physiology | Systematics | Taxonomy | Botany | Bryology | Natural History Collections | Science Communication</span></h2>
 						<footer>
-						  <p>Our research focuses on the development, evolution, and function of plant structures. We study morphological features that are used to distinguish species taxonomically and those that are important for reproduction and fitness. Our research also focuses on the relationship betwen parental gametophytes and their sporophyte offspring. Some of the tools we use to address our research questions are natural history collections, molecular systematic techniques, electron microscopy, and manipulation experiments.</p>
+						  <p>Our research focuses on the development, evolution, and function of plant structures. We study morphological features that are used to distinguish species taxonomically and those that are important for reproduction and fitness. Our research also focuses on the relationship between parental gametophytes and their sporophyte offspring. Some of the tools we use to address our research questions are natural history collections, molecular systematic techniques, electron microscopy, and manipulation experiments.</p>
 							
 							<ul class="actions">
 							</ul>
@@ -173,7 +173,7 @@ To apply for this position please send an email expressing your interest with yo
 								</div>
 							</div>
 					<div class="copyright">
-				    &copy; Copyright 2021 JM Budke All rights reserved.</div>
+				    &copy; Copyright 2022 JM Budke All rights reserved.</div>
 				</footer>
 
 		</div>
