--- a/labmembers.html
+++ b/labmembers.html
@@ -77,7 +77,7 @@
 										<a href="#" class="image fit"><img src="images/EricS.png" alt="" /></a>
 										<p><strong>Eric Shershen<br />Ph.D. Graduate Student</strong><br /> 
 											Aug 2019 – Present<br /></p>
-										<p>	B.A., <a href="https://www.augustana.edu/academics/areas-of-study/biology" target="_blank">Augustana College</a>, 2018                      </p>
+										<p>	B.A., <a href="https://www.augustana.edu/academics/areas-of-study/biology" target="_blank">Augustana College</a>, 2018&nbsp; &nbsp; &nbsp;&nbsp; </p>
 										<p>
 											<span class="icon solid fa-envelope"><span class="label">Email</span></span> 
 											&nbsp; <a href="mailto:eshershe@utk.edu">eshershe@utk.edu</a><br />
@@ -92,9 +92,9 @@
 										<a href="#" class="image fit"><img src="images/Butler.jpg" alt="" /></a>
 										<p><strong>Julia Butler<br />M.S. Graduate Student</strong><br /> 
 											Aug 2021 – Present</p>
-									<p>B.A., <a href="https://www.oberlin.edu/" target="_blank">Oberlin College,</a> 2019                        </p>
+									<p>B.A., <a href="https://www.oberlin.edu/" target="_blank">Oberlin College,</a> 2019&nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; </p>
 										<p>
-									<p>
+								  <p>
 											<span class="icon solid fa-envelope"><span class="label">Email</span></span> 
 											&nbsp; <a href="mailto:jbutle63@vols.utk.edu">jbutle63@vols.utk.edu</a><br />
 										<span class="icon solid fa-map-marker-alt"><span class="label">Address</span></span> 
