Eric Website Update

--- a/labmembers.html
+++ b/labmembers.html
@@ -74,8 +74,9 @@
 								</header>
 							  <div class="row">
 									<div class="col-3 col-6-narrow col-12-mobilep">
-										<a href="#" class="image fit"><img src="images/EricS.png" alt="" /></a>
-										<p><strong>Eric Shershen<br />Ph.D. Graduate Student</strong><br /> 
+										<a href="StudentPage_Shershen.html" class="image fit"><img src="images/Shershen_HikingSelfie_WebsiteCrop.jpg" alt="" /></a>
+										<a href="StudentPage_Shershen.html" target="_blank"><p><strong>Eric Shershen<br /></a>
+										  Ph.D. Candidate</strong><br /> 
 											Aug 2019 – Present<br /></p>
 										<p>	B.A., <a href="https://www.augustana.edu/academics/areas-of-study/biology" target="_blank">Augustana College</a>, 2018&nbsp; &nbsp; &nbsp;&nbsp; </p>
 										<p>
@@ -90,7 +91,8 @@
 								  
 								<div class="col-3 col-6-narrow col-12-mobilep">
 										<a href="#" class="image fit"><img src="images/Butler.jpg" alt="" /></a>
-										<p><strong>Julia Butler<br />M.S. Graduate Student</strong><br /> 
+										<p><strong>Julia Butler<br />
+										  M.Sc. Graduate Student</strong><br /> 
 											Aug 2021 – Present</p>
 									<p>B.A., <a href="https://www.oberlin.edu/" target="_blank">Oberlin College,</a> 2019&nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; </p>
 										<p>
@@ -108,7 +110,7 @@
 										<a href="#" class="image fit"><img src="images/FillerPhoto.jpg" alt="" /></a>
 								  <p><strong>Vishal Kennedy<br />Ph.D. Graduate Student</strong><br /> 
 									    Aug 2022 – Present</p>
-									<p>B.Sc., <a href="https://www.iiserpune.ac.in/" target="_blank">Indian Institute of Science Education and Research,</a> 2021</p>
+									<p>B.Sc. & M.Sc., <a href="https://www.iiserpune.ac.in/" target="_blank">Indian Institute of Science Education and Research,</a> 2021</p>
 										 <p>
 											<span class="icon solid fa-envelope"><span class="label">Email</span></span> 
 											&nbsp; <a href="mailto:vkenned2@vols.utk.edu">vkenned2@vols.utk.edu</a><br />
@@ -170,7 +172,7 @@
 										<p><strong>Haddy Salem<br />Undergraduate Researcher</strong><br /> 
 											Sept 2020 – May 2022</p>
 									<p>
-									  Major – Biological Sciences</p>
+									  Major – Biological Sciences, concentration EEB</p>
 									</div>
 									<div class="col-3 col-6-narrow col-12-mobilep">
 										<a href="#" class="image fit"><img src="images/AlexA.png" alt="" /></a>
