--- a/labmembers.html
+++ b/labmembers.html
@@ -90,8 +90,8 @@
 									</div>
 								  
 								<div class="col-3 col-6-narrow col-12-mobilep">
-										<a href="#" class="image fit"><img src="images/Butler.jpg" alt="" /></a>
-										<p><strong>Julia Butler<br />
+										<a href="ButlerStudentPage.html" class="image fit"><img src="images/ButlerPhotoWebsiteCrop.jpg" alt="" /></a>
+										<a href="ButlerStudentPage.html" target="_blank"><p><strong>Julia Butler<br />
 										  M.Sc. Graduate Student</strong><br /> 
 											Aug 2021 – Present</p>
 									<p>B.A., <a href="https://www.oberlin.edu/" target="_blank">Oberlin College,</a> 2019&nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; </p>
