--- a/StudentPage_Shershen.html
+++ b/StudentPage_Shershen.html
@@ -45,10 +45,11 @@
 									  <p>	<b>Ph.D. Candidate, University of Tennessee, Knoxville, 2019 - Present </b><br />
 									     B.A., <a href="https://www.augustana.edu/academics/areas-of-study/biology" target="_blank">Augustana College</a>, 2018<br />
 									  <span class="icon solid fa-envelope"><span class="label">Email</span></span> 
-											&nbsp; <a href="mailto:eshershe@utk.edu">eshershe@utk.edu</a><br />
+											&nbsp; <a href="mailto:eshershe@utk.edu">eshershe@vols.utk.edu</a><br />
 										<span class="icon solid fa-map-marker-alt"><span class="label">Address</span></span> 
 									&nbsp; &nbsp;430 Hesler Biology Building<br /></p>
-									  <p><a href="https://www.researchgate.net/profile/Eric-Shershen" target="_blank">ResearchGate Page</a><br />
+									  <p>Additional Links: <br />
+										  <a href="https://www.researchgate.net/profile/Eric-Shershen" target="_blank">ResearchGate&nbsp;</a><br />
 								    <a href="people_files/Eric Shershen CV_Oct 2022.pdf" target="_blank">Current CV</a><br /></p>
 									   
 									  
