--- a/StudentPage_Kennedy.html
+++ b/StudentPage_Kennedy.html
@@ -43,7 +43,7 @@
 										<a name="outdoorbotanypresentations"></a>
 									<h3>Vishal Kennedy</h3>
 									   <p>	<strong>Ph.D. Student, University of Tennessee, Knoxville, 2022 - Present <br /></strong>
-									     B.S.-M.S. in Biological Sciences, <a href="https://www.iiserpune.ac.in/" target="_blank">IISER - Kolkata,</a> 2021<br />
+									     B.S.-M.S. in Biological Sciences, <a href="https://www.iiserkol.ac.in/web/en/#gsc.tab=0" target="_blank">IISER - Kolkata,</a> 2021<br />
 								    <span class="icon solid fa-envelope"><span class="label">Email</span></span> 
 											&nbsp; <a href="mailto:vkenned2@vols.utk.edu">vkenned2@vols.utk.edu</a><br />
 									<span class="icon solid fa-map-marker-alt"><span class="label">Address</span></span> 
