--- a/labmembers.html
+++ b/labmembers.html
@@ -105,8 +105,8 @@
 								  	 <div class="col-3 col-6-narrow col-12-mobilep">
 										<a href="StudentPage_Kennedy.html" class="image fit"><img src="images/Vishal_Kennedy_Website_Pic_Cropped.jpg" alt="" /></a>
 								  <a href="StudentPage_Kennedy.html" target="_blank"><p><strong>Vishal Kennedy<br />Ph.D. Student</strong><br /> 
-									    Aug 2022 – Present</p>
-									<p>B.S.-M.S. in Biological Sciences, <a href="https://www.iiserpune.ac.in/" target="_blank">IISER - Kolkata,</a> 2021</p>
+									    Aug 2022 – Present</p></a>
+									<p>B.S.-M.S. in Biological Sciences, <a href=" https://www.iiserkol.ac.in/web/en/#gsc.tab=0" target="_blank">IISER - Kolkata,</a> 2021</p>
 										 <p>
 											<span class="icon solid fa-envelope"><span class="label">Email</span></span> 
 											&nbsp; <a href="mailto:vkenned2@vols.utk.edu">vkenned2@vols.utk.edu</a><br />
