--- a/ButlerStudentPage.html
+++ b/ButlerStudentPage.html
@@ -42,7 +42,7 @@
 								  <div class="col-8 col-8-narrow col-12-mobilep">
 										<a name="outdoorbotanypresentations"></a>
 									<h3>Julia Butler </h3>
-									   <p><b>	M.Sc. Student, University of Tennessee, Knoxville, 2021 - Present <br /></b>
+									   <p><b>	M.Sc. Candidate, University of Tennessee, Knoxville, 2021 - Present <br /></b>
 									     B.A. in Biology, <a href="https://www.oberlin.edu/" target="_blank">Oberlin College</a>, 2019<br />
 									  <span class="icon solid fa-envelope"><span class="label">Email</span></span> 
 											&nbsp; <a href="mailto:jbutle63@vols.utk.edu">jbutle63@vols.utk.edu</a><br />
