Headshot &Publication Update
Headshot &Publication Update

--- a/labmembers.html
+++ b/labmembers.html
@@ -46,7 +46,7 @@
 								<a href="#" class="image fit"><img src="images/pic05.jpg" alt="" /></a>
 								<a name="principalinvestigator"></a><h2>Principal Investigator</h2>
 								<p>
-									<span class="image left"><img src="images/JessicaE.jpg" alt="Dr. Jessica M. Budke Photo" /></span>
+									<span class="image left"><img src="images/JessicaBudkeHeadShot3.jpg" alt="Dr. Jessica M. Budke Photo" /></span>
 							  <h3>Dr. Jessica M. Budke - Associate Professor &amp; Herbarium Director (TENN)</h3>
 								<ul>
 									Ph.D., <a href="https://eeb.uconn.edu/" target="_blank">University of Connecticut</a>, 2011<br />
