--- a/publications.html
+++ b/publications.html
@@ -49,12 +49,26 @@
 									<a name="peerreviewed"></a><div class="table-wrapper">
 									<table>
 										<tbody>
-																						<tr>
+										  <tr>
+											<td>2022</td>      
+												<td><strong>Budke JM<sup>1</sup>,</strong> Patel NR<sup>1</sup>, GoFlag Consortium, Wienhold MD, Bruggeman-Nannenga MA. Exploring systematic relationships and morphological evolution in the moss genus <i>Fissidens</i> using molecular data generated from herbarium specimens. <i>Journal of Systematics and Evolution</i> 0: 000-000. (<sup>1</sup>co-first authors)<a href="https://doi.org/10.1111/jse.12926" target="_blank"> Online </a></td>
+											</tr>
+											<td>2022</td>      
+												<td>Lewis RA, <strong>Budke JM.</strong> Bryophyte specimen organization and storage systems: A comparative assessment of staff practices and user preferences. <i>The Bryologist</i> 125: 222-247.<a href="https://doi.org/10.1639/0007-2745-125.2.222" target="_blank"> Online </a></td>
+											</tr>
+																	<tr>
+											<td>2022</td>      
+												<td>Harrison GR**, Boggess LM, <strong>Budke JM,</strong> Madritch MD. Rock-climbing shifts cliff-face vegetation community composition based on site characteristics. <i>Applied Vegetation Science</i> 25(2): e12667. (**graduate student collaborator)<a href="https://doi.org/10.1111/avsc.12667" target="_blank"> Online </a></td>
+											</tr>
+											<td>2022</td>      
+												<td>Oliver MG, Crabtree T, McFarland KD, <strong>Budke JM.</strong> Noteworthy Collections: First documented antheridia on <i>Palamocladium leskeoides</i> (Brachytheciaceae) in North America. <i>Castanea</i> 87: 75-80.<a href="https://doi.org/10.2179/0008-7475.87.1.75" target="_blank"> Online </a></td>
+											</tr>					
+											<tr>
 											<td>2021</td>      
 												<td>Whitaker KR*, <strong>Budke JM</strong>. Moss sporophyte transpiration rates are higher when calyptrae are removed.  <i>Evansia</i> 38: 100-108.  (*undergraduate student collaborator)<a href="https://bioone.org/journals/evansia/volume-38/issue-3/0747-9859-38.3.100/Moss-Sporophyte-Transpiration-Rates-are-Higher-when-Calyptrae-are-Removed/10.1639/0747-9859-38.3.100.full" target="_blank"> Online </a></td>
 											</tr>
 											<td>2020</td>      
-												<td>Benoit AD**, Oliver MG, Vichich RJ*, <strong>Budke JM</strong>. Noteworthy Collections: First record of the non-native plant <i>Portulaca amilis</i> (Portulacaceae) in Tennessee. <i>Castanea</i> 85: 343-347. (**graduate student collaborator, *undergraduate student collaborator)<a href="https://castaneajournal.com/article/noteworthy-collections-first-record-of-the-non-native-plant-portulaca-amilis-portulacaceae-in-tennessee/" target="_blank"> Online </a></td>
+												<td>Benoit AD**, Oliver MG, Vichich RJ*, <strong>Budke JM</strong>. Noteworthy Collections: First record of the non-native plant <i>Portulaca amilis</i> (Portulacaceae) in Tennessee. <i>Castanea</i> 85: 343-347. (**graduate student collaborator, *undergraduate student collaborator)<a href="https://doi.org/10.2179/0008-7475.85.2.343" target="_blank"> Online </a></td>
 											</tr>
 											<tr>
 												<td>2020</td>      
@@ -86,7 +100,7 @@
 											</tr>
 											<tr>
 												<td>2016</td>      
-												<td>Ranjan A<sup>1</sup>, <strong>Budke JM<sup>1</sup></strong>, Rowland SD<sup>1</sup>, Chitwood DH, Kumar R, Ichihashi Y, Zumstein K, Maloof JN, Sinha NR. eQTL in a precisely defined tomato introgression population reveal genetic regulation of gene expression patterns related to physiological and developmental pathways. <i>Plant Physiology</i> 172: 328-340. (<sup>1</sup>equal co-first authors) <a href="https://doi.org/10.1104/pp.16.00289" target="_blank">Online</a></td>
+												<td>Ranjan A<sup>1</sup>, <strong>Budke JM<sup>1</sup></strong>, Rowland SD<sup>1</sup>, Chitwood DH, Kumar R, Ichihashi Y, Zumstein K, Maloof JN, Sinha NR. eQTL in a precisely defined tomato introgression population reveal genetic regulation of gene expression patterns related to physiological and developmental pathways. <i>Plant Physiology</i> 172: 328-340. (<sup>1</sup>co-first authors) <a href="https://doi.org/10.1104/pp.16.00289" target="_blank">Online</a></td>
 											</tr>
 											<tr>
 												<td>2016</td>      
@@ -106,7 +120,7 @@
 											</tr>
 											<tr>
 												<td>2014</td>      
-												<td>Cain B<sup>1</sup>, <strong>Budke JM<sup>1</sup></strong>, Wood KJ, Sweeney NT, Schwessinger B. How postdocs benefit from building a union. <i>eLife</i> 3: e05614. (<sup>1</sup>equal co-first authors) <a href="http://www.ncbi.nlm.nih.gov/pmc/articles/PMC4238050/" target="_blank">Online</a></td>
+												<td>Cain B<sup>1</sup>, <strong>Budke JM<sup>1</sup></strong>, Wood KJ, Sweeney NT, Schwessinger B. How postdocs benefit from building a union. <i>eLife</i> 3: e05614. (<sup>1</sup>co-first authors) <a href="http://www.ncbi.nlm.nih.gov/pmc/articles/PMC4238050/" target="_blank">Online</a></td>
 											</tr>
 											<tr>
 												<td>2013</td>      
