--- a/research.html
+++ b/research.html
@@ -60,6 +60,9 @@
 									<h4>Relevant publications:</h4><div class="table-wrapper">
 									<table>
 										<tbody>
+											<td>2021</td>      
+												<td>Whitaker KR*, <strong>Budke JM</strong>. Moss sporophyte transpiration rates are higher when calyptrae are removed.  <i>Evansia</i> 38: 100-108.  (*undergraduate student collaborator)<a href="https://bioone.org/journals/evansia/volume-38/issue-3/0747-9859-38.3.100/Moss-Sporophyte-Transpiration-Rates-are-Higher-when-Calyptrae-are-Removed/10.1639/0747-9859-38.3.100.full" target="_blank"> Online </a></td>
+											</tr>
 											<tr>
 												<td>2019</td>
 												<td><strong>Budke JM</strong>. The moss calyptra: A maternal structure influencing offspring development. <i>The Bryologist</i> 122: 471-491. (<a href="https://bioone.org/journals/the-bryologist/volume-122/issue-3" target="_blank">Featured on the cover</a>: Volume 122, Issue 3) <a href="https://doi.org/10.1639/0007-2745-122.3.471" target="_blank"> Online</a></td>
@@ -99,6 +102,10 @@
 									<h4>Relevant publications:</h4><div class="table-wrapper">
 									<table>
 										<tbody>
+											 <tr>
+											<td>2022</td>      
+												<td><strong>Budke JM<sup>1</sup>,</strong> Patel NR<sup>1</sup>, GoFlag Consortium, Wienhold MD, Bruggeman-Nannenga MA. Exploring systematic relationships and morphological evolution in the moss genus <i>Fissidens</i> using molecular data generated from herbarium specimens. <i>Journal of Systematics and Evolution</i> 0: 000-000. (<sup>1</sup>co-first authors)<a href="https://doi.org/10.1111/jse.12926" target="_blank"> Online </a></td>
+											</tr>
 											<tr>
 												<td>2019</td>    
 												<td>Patel N, Fawcett S, Sundue M, <strong>Budke JM</strong>. Evolution of perine morphology in the Thelypteridaceae. <i>International Journal of Plant Sciences</i> 180: 1016-1035. <a href="https://doi.org/10.1086/705588" target="_blank">Online</a></td>
@@ -143,6 +150,13 @@
 									<h4>Relevant publications:</h4><div class="table-wrapper">
 									<table>
 										<tbody>
+																<tr>
+											<td>2022</td>      
+												<td>Harrison GR**, Boggess LM, <strong>Budke JM,</strong> Madritch MD. Rock-climbing shifts cliff-face vegetation community composition based on site characteristics. <i>Applied Vegetation Science</i> 25(2): e12667. (**graduate student collaborator)<a href="https://doi.org/10.1111/avsc.12667" target="_blank"> Online </a></td>
+											</tr>
+											<td>2022</td>      
+												<td>Oliver MG, Crabtree T, McFarland KD, <strong>Budke JM.</strong> Noteworthy Collections: First documented antheridia on <i>Palamocladium leskeoides</i> (Brachytheciaceae) in North America. <i>Castanea</i> 87: 75-80.<a href="https://doi.org/10.2179/0008-7475.87.1.75" target="_blank"> Online </a></td>
+											</tr>
 											<tr>
 											<td>2020</td>      
 												<td>Benoit AD**, Oliver MG, Vichich RJ*, <strong>Budke JM</strong>. Noteworthy Collections: First record of the non-native plant <i>Portulaca amilis</i> (Portulacaceae) in Tennessee. <i>Castanea</i> 85: 343-347. (**graduate student collaborator, *undergraduate student collaborator)<a href="https://castaneajournal.com/article/noteworthy-collections-first-record-of-the-non-native-plant-portulaca-amilis-portulacaceae-in-tennessee/" target="_blank"> Online </a></td>
@@ -167,12 +181,8 @@
 				<footer id="footer">
 					<div class="container">
 						<div class="row">
-							<div class="col-12 col-12-narrow col-12-mobilep">
-								<h3>Interested in joining the lab?</h3>
-								<p>We are recruiting a PhD student to work on  a US National Science Foundation funded project studying the functional morphology and evolution of the parent-offspring conflict in moss plants!
-								    Applications due Dec 2022 with a start date of Aug 2023. Includes a 3-year Graduate Research Assistantship. <br>
-									  <a href="people_files/OpenPhdPositionStartingFall2023.pdf" target="_blank">Click here for more information about the project.</a> To apply for this position please send an email expressing your interest with your CV and unofficial transcripts attached to Dr. Jessica Budke <a title="mailto:jbudke@utk.edu" href="mailto:jbudke@utk.edu">jbudke@utk.edu</a> </a><br /> </p>
-							</div>
+							
+								
 								<div class="col-12 col-12-narrow col-12-mobilep"><h3>Contact Info</h3>
 							</div>
 								<div class="col-3 col-6-narrow col-12-mobilep">
